--- a/src/app/components/other-skills/other-skills.component.html
+++ b/src/app/components/other-skills/other-skills.component.html
@@ -1,5 +1,5 @@
 <div class="mainOtherSkills">
-    <img class="backImg" src="assets/black1.jpg" alt="">
+    <!-- <img class="backImg" src="assets/black1.jpg" alt=""> -->
 
     <h2 class="mainHeading">Curriculum Activities</h2>
     <div class="innerClass">
