--- a/src/app/components/tech-skills/tech-skills.component.html
+++ b/src/app/components/tech-skills/tech-skills.component.html
@@ -1,9 +1,9 @@
 <div class="mainTech">
-    <img class="backImg" src="https://4kwallpapers.com/images/wallpapers/dark-background-abstract-background-network-3d-background-3840x2160-8324.png" alt="">
+    <!-- <img class="backImg" src="https://4kwallpapers.com/images/wallpapers/dark-background-abstract-background-network-3d-background-3840x2160-8324.png" alt=""> -->
     <h2 class="mainHeading">My Technical Skills</h2>
     <div class="container">
         <div class="container__progressbars">
-            <div class="prClass">
+            <div class="prClass boxHtml">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-html shadow-html">
@@ -17,7 +17,7 @@
                 <h2>HTML</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxScss">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-scss shadow-scss">
@@ -31,7 +31,7 @@
                 <h2>SCSS</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxJs">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-js shadow-js"> </circle>
@@ -43,7 +43,7 @@
                 <h2>Javascript</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxAngular">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-angular shadow-angular">
@@ -56,7 +56,7 @@
                 <h2>Angular</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxReact">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-react shadow-react">
@@ -70,7 +70,7 @@
                 <h2>React JS</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxNode">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-node shadow-node">
@@ -83,7 +83,7 @@
                 <h2>Node JS</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass noxExpress">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-express shadow-express">
@@ -96,7 +96,7 @@
                 <h2>Express JS</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxMySQL">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-mysql shadow-mysql">
@@ -109,7 +109,7 @@
                 <h2>MySQL</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxMongoDB">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-mongodb shadow-mongodb">
@@ -123,7 +123,7 @@
                 <h2>MongoDB</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxGit">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-git shadow-git"> </circle>
@@ -135,7 +135,7 @@
                 <h2>Git, Github</h2>
             </div>
 
-            <div class="prClass">
+            <div class="prClass boxCoreJava">
                 <div class="progressbar">
                     <svg class="progressbar__svg">
                         <circle cx="80" cy="80" r="70" class="progressbar__svg-circle circle-corejava shadow-corejava">
