--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,11 +1,11 @@
 <div class="mainWork">
-    <img class="backImg" src="https://c1.wallpaperflare.com/preview/547/595/807/business-computer-contemporary-dark.jpg" alt="">
+    <!-- <img class="backImg" src="https://c1.wallpaperflare.com/preview/547/595/807/business-computer-contemporary-dark.jpg" alt=""> -->
     
     <div class="workInfo">
         <h1 class="mainHeading">Work Experience</h1>
         <div class="cards">
             <div class="card">
-                <div class="imgComp" style="text-align: center;">
+                <div class="imgComp">
                     <img class="compImg" src="assets/aquarious.jpg" alt="">
                 </div>
                 <h3>Aquarious Technology</h3>
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="imgComp" style="text-align: center;">
+                <div class="imgComp">
                     <img class="compImg" src="assets/fintech.jpg" alt="">
                 </div>
                 <h3>Fintech Global Center</h3>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="imgComp" style="text-align: center;">
+                <div class="imgComp">
                     <img class="compImg" src="assets/intellect.png" alt="">
                 </div>
                 <h3>Intellect Design Arena</h3>
