--- a/src/app/components/contact-me/contact-me.component.html
+++ b/src/app/components/contact-me/contact-me.component.html
@@ -1,1 +1,63 @@
-<p>contact-me works!</p>
+<div class="contactMainClass">
+    <h2 class="h1-responsive mainHeading paddingTop">Contact Me</h2>
+    <div class="mainClass">
+        <section class="mb-4">
+            <div class="row">
+                <div class="col-md-8 mb-md-0 mb-5">
+                    <form id="contact-form">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="md-form mb-0">
+                                    <label for="name">Your name</label>
+                                    <input type="text" id="name" name="name" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="md-form mb-0">
+                                    <label for="email">Your email</label>
+                                    <input type="text" id="email" name="email" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="md-form mb-0">
+                                    <label for="subject">Subject</label>
+                                    <input type="text" id="subject" name="subject" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="md-form">
+                                    <label for="message">Your message</label>
+                                    <textarea type="text" id="message" name="message" rows="2"
+                                        class="form-control md-textarea"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="text-left text-md-left">
+                        <a class="btn btn-primary">Send</a>
+                    </div>
+                    <div class="status"></div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <ul class="list-unstyled mb-0">
+                        <li (click)="openMap()"><i class="fa fa-map-marker fa-2x"></i>
+                            <p>3207, Near Phadatare Wada, Ganapati Road, Ashta</p>
+                        </li>
+    
+                        <li><i class="fa fa-phone mt-4 fa-2x"></i>
+                            <p>+91 8600480438</p>
+                        </li>
+    
+                        <li (click)="openGmail()"><i class="fa fa-envelope mt-4 fa-2x"></i>
+                            <p>{{email}}</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
