--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -1,59 +1,118 @@
-.mainEdu{
-    
-    .backImg{
+.mainEdu {
+    background-color: #01091e;
+    height: 100%;
+    margin: 0;
+
+    .backImg {
         height: 100%;
         width: 100%;
         opacity: 0.3;
         position: fixed;
     }
 
-    .innerEdu{
+    .innerEdu {
         margin: 0 auto;
         width: 800px;
         text-align: center;
 
-        .imgAndDetails{
+        .imgAndDetails {
             display: flex;
             align-items: center;
             margin: 3rem 0;
             justify-content: center;
+            background-color: transparent;
 
-            .img{
-                z-index: 999;
-                img{
+            .img {
+                // z-index: 999;
+
+                img {
                     height: 13rem;
                     width: auto;
                     border-radius: 10px;
                     z-index: 999;
-                    box-shadow: 0px 0px 15px 1px rgb(121, 121, 121);
+                    box-shadow: 0px 0px 15px 1px rgb(0, 0, 0);
                 }
             }
-            .details{
-                background-color: black;
+
+            .details {
+                background-color: #010510;
                 backdrop-filter: blur(15px);
                 border-radius: 15px;
                 margin-left: -5rem;
-                z-index: 999;
+                z-index: 100;
                 text-align: left;
                 padding: 1rem;
-                box-shadow: 0px 0px 15px 1px rgb(51, 51, 51);
-                
+                box-shadow: 0px 0px 15px 1px rgb(0, 0, 0);
 
-                h4, p{
+                h4,
+                p {
                     margin: 5px;
                     color: white;
                     letter-spacing: 1px;
                 }
 
-                .degree{
+                .degree {
                     color: rgb(0, 132, 255);
                     font-size: 20px;
                 }
 
-                .year{
+                .year {
                     color: #ffb703;
                 }
             }
         }
+    }
+}
+
+.respEdu {
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+    background-color: #1d1d1d;
+
+    .imgAndDetails {
+        display: inline-block;
+        width: 80%;
+        margin: 3rem 0;
+
+        .img {
+            img {
+                height: 8rem;
+                width: auto;
+                margin-bottom: -4rem;
+                border-radius: 10px;
+                box-shadow: 0px 0px 10px 2px gray;
+            }
+        }
+
+        .details {
+            background-color: black;
+            padding: 6rem 0.6rem 1rem;
+            border-radius: 10px;
+            box-shadow: 7px 7px 15px 5px rgb(9, 9, 9);
+
+            h4, .year, .degree{
+                color: white;
+                font-size: 20px;
+                letter-spacing: 1px;
+            }
+            .degree{
+                color: #ffb703;
+            }
+        }
+    }
+}
+
+@media (min-width : 900px) {
+    .respEdu {
+        display: none;
+        visibility: hidden;
+    }
+}
+
+@media (max-width : 900px) {
+    .mainEdu {
+        display: none;
+        visibility: hidden;
     }
 }
