--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,15 +1,17 @@
 .mainFooter {
     margin: 0 auto 0;
     width: 100%;
-    background-color: black;
+    background-color: #010510;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
     height: 4rem;
     position: fixed;
-    z-index: 999;
-
+    z-index: 999 !important;
+    opacity: 1;
+    box-shadow: 0px 0px 15px 2px black;
+    
     .mainLogo {
         img {
             height: 3rem;
@@ -74,7 +76,7 @@
         padding-left: 0;
         align-items: center;
         position: absolute;
-        background-color: black;
+        background-color: #010510;
         width: 100%;
 
         li {
@@ -95,14 +97,14 @@
     }
 }
 
-@media (min-width : 1130px) {
+@media (min-width : 1000px) {
     .respFooter {
         display: none;
         visibility: hidden;
     }
 }
 
-@media (max-width : 1130px) {
+@media (max-width : 1000px) {
 
     .mainFooter {
         display: none;
@@ -117,8 +119,9 @@
         align-items: center;
         position: fixed;
         backdrop-filter: blur(15px);
+        background-color: #010510;
         z-index: 999;
-        box-shadow: 0px 0px 15px 1px gray;
+        box-shadow: 0px 0px 15px 1px rgb(81, 81, 81);
 
         .userLogo {
 
@@ -126,6 +129,8 @@
                 border-radius: 50%;
                 height: 3rem;
                 width: 3rem;
+                object-fit: cover;
+                box-shadow: 0px 0px 15px 2px rgb(129, 129, 129);
             }
         }
 
