--- a/src/app/components/other-skills/other-skills.component.scss
+++ b/src/app/components/other-skills/other-skills.component.scss
@@ -1,4 +1,5 @@
 .mainOtherSkills{
+    background-color: #01091e;
     .backImg{
         height: 100%;
         width: 100%;
@@ -12,7 +13,7 @@
         width: fit-content;
         text-align: center;
         padding: 2rem;
-        margin: 0 auto;
+        margin: 3rem auto;
         border-radius: 20px;
         box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.3);
 
@@ -225,6 +226,8 @@
 @media (max-width : 767px) {
     .mainOtherSkills{
         .innerClass{
+            width: 90%;
+            margin-top: 2rem;
             .classMain{
                 display: inline;
 
