--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,5 +1,5 @@
 .mainProjects {
-
+    background-color: #01091e;
     .backImg {
         height: 100%;
         width: 100%;
@@ -26,9 +26,9 @@
             display: inline-grid;
             padding: 1rem;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px 2px rgb(0, 0, 0);
+            box-shadow: 7px 7px 15px 2px rgb(0, 0, 0);
             backdrop-filter: blur(15px);
-            background-color: transparent;
+            background-color: #010510;
             margin: 1rem 0;
             width: 700px;
 
