--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -6,11 +6,14 @@
         width: auto;
         z-index: 999;
         opacity: 1;
+        box-shadow: 7px 7px 10px 2px black;
     }
 }
-.backImg{
-    background: linear-gradient(112.1deg, rgb(0, 0, 0) 11.4%, rgb(15, 20, 35) 70.2%);
+
+.backImg {
+    background-color: #01091e;
 }
+
 .btnDownload {
     text-align: center;
     margin-bottom: 2rem;
@@ -54,7 +57,8 @@
             width: 100%;
         }
     }
-    h2{
+
+    h2 {
         font-size: 30px;
         margin: 0rem 0 2rem;
     }
@@ -62,6 +66,6 @@
 
 @media (max-width : 767px) {
     .marginTop {
-       padding-top: 6rem;
+        padding-top: 6rem;
     }
 }
