--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
     font-family: 'Rubik', sans-serif;
 }
 body{
-    background-color: black;
+    background-color: #01091e;
 }
 
 .colorYellow{
@@ -26,14 +26,23 @@ body{
 .colorBlue{
     color: rgb(0, 132, 255);
 }
-
+.opacity3{
+    opacity: 0.3;
+}
 .marginRight{
     margin-right: -5rem !important;
 }
+.borderRight{
+    border-right: 5px solid #ffb703;
+}
 
+.borderLeft{
+    border-left: 5px solid #ffb703;
+}
 .mainHeading{
     font-size: 50px;
-    color: rgb(0, 132, 255);
+    color: transparent;
+    -webkit-text-stroke: 2px rgb(0, 132, 255);
     text-shadow: 0 0 10px rgb(0, 52, 100), 0 0 10px rgb(0, 132, 255); 
     padding-top: 5rem;
     font-weight: bold;
@@ -41,4 +50,10 @@ body{
     z-index: 999;
     opacity: 1;
     text-align: center;
+}
+
+@media (max-width : 767px) {
+    .mainHeading{
+        font-size: 40px;
+    }
 }
