some design changed

--- a/src/app/components/contact-me/contact-me.component.html
+++ b/src/app/components/contact-me/contact-me.component.html
@@ -1,4 +1,4 @@
-<div class="contactMainClass">
+<div class="contactMainClass" [ngClass]=" opacityNew ? 'opacity3' : '' ">
     <h2 class="h1-responsive mainHeading paddingTop">Contact Me</h2>
     <div class="mainClass">
         <section class="mb-4">
