--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
     </button>
 </div>
 <div class="navUl" *ngIf="openNav" >
-    <ul (click)="openNav = false">
+    <ul (click)="closeHideNav()">
         <li routerLink="/profile" style="padding-top: 1rem;"> <i class="fa fa-user-circle-o"></i> Profile</li>
         <li routerLink="/work"> <i class="fa fa-suitcase"></i> Work</li>
         <li routerLink="/projects"> <i class="fa fa-folder-open-o"></i> Projects</li>
@@ -37,6 +37,6 @@
     </div>
     <div class="lines">
         <i class="fa fa-bars" (click)="openHideNav()" *ngIf="!openNav"></i>
-        <i class="fa fa-times" (click)="openHideNav()" *ngIf="openNav"></i>
+        <i class="fa fa-times" (click)="closeHideNav()" *ngIf="openNav"></i>
     </div>
 </div>
