--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -78,6 +78,7 @@
         position: absolute;
         background-color: #010510;
         width: 100%;
+        z-index: 999;
 
         li {
             padding-left: 1rem;
