--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
-<div class="profileMain">
-    <img class="backImg" src="../../../assets/profileBack.jpg" alt="">
+<div class="profileMain" [ngClass]=" opacityNew ? 'opacity3' : '' ">
+    <img class="backImg" src="assets/profileBack.jpg" alt="">
 
     <div class="mainInfoAndImg">
         <div class="mainInfo">
