--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,5 +1,5 @@
 
-<div class="backImg">
+<div class="backImg" [ngClass]=" opacityNew ? 'opacity3' : '' ">
     <h2 class="mainHeading">My Resume</h2>
     <div class="image">
         <img src="assets/harshalResume.png" alt="">
