--- a/src/app/components/tech-skills/tech-skills.component.html
+++ b/src/app/components/tech-skills/tech-skills.component.html
@@ -1,5 +1,4 @@
-<div class="mainTech">
-    <!-- <img class="backImg" src="https://4kwallpapers.com/images/wallpapers/dark-background-abstract-background-network-3d-background-3840x2160-8324.png" alt=""> -->
+<div class="mainTech" [ngClass]=" opacityNew ? 'opacity3' : '' ">
     <h2 class="mainHeading">My Technical Skills</h2>
     <div class="container">
         <div class="container__progressbars">
