--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,5 +1,4 @@
-<div class="mainWork">
-    <!-- <img class="backImg" src="https://c1.wallpaperflare.com/preview/547/595/807/business-computer-contemporary-dark.jpg" alt=""> -->
+<div class="mainWork" [ngClass]=" opacityNew ? 'opacity3' : '' ">
     
     <div class="workInfo">
         <h1 class="mainHeading">Work Experience</h1>
