--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,5 +1,4 @@
 <div class="mainEdu">
-    <!-- <img class="backImg" src="https://c0.wallpaperflare.com/preview/318/2/423/pr4r2m4evt2u4aishdff44upth.jpg" alt=""> -->
 
     <div class="innerEdu">
         <h2 class="mainHeading">Education Background</h2>
@@ -37,8 +36,7 @@
     </div>
 </div>
 
-<div class="respEdu">
-
+<div class="respEdu" [ngClass]=" opacityNew ? 'opacity3' : '' ">
     <h2 class="mainHeading">Education Background</h2>
     <div class="imgAndDetails">
         <div class="img">
