--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,5 +1,4 @@
-<div class="mainProjects">
-    <!-- <img class="backImg" src="https://wallpapers.com/images/hd/4k-laptop-on-black-desk-qrlk8vcxz01kbm0h.jpg" alt=""> -->
+<div class="mainProjects" [ngClass]=" opacityNew ? 'opacity3' : '' ">
     <div class="mainCard">
         <h1 class="mainHeading">Projects</h1>
         <div class="card">
