--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,7 +11,7 @@
     z-index: 999 !important;
     opacity: 1;
     box-shadow: 0px 0px 15px 2px black;
-    
+
     .mainLogo {
         img {
             height: 3rem;
@@ -35,7 +35,7 @@
             list-style: none;
             font-weight: normal;
             cursor: pointer;
-            color: white;
+            color: #ffb703;
             font-size: 18px;
             letter-spacing: 1.5px;
         }
@@ -138,10 +138,9 @@
         .name {
             span {
                 font-size: 30px;
-                background-image: repeating-linear-gradient(to right, #ffb703, rgb(0, 132, 255) 30%, #3c9a44 20%);
                 color: transparent;
-                background-clip: text;
-                -webkit-background-clip: text;
+                -webkit-text-stroke: 2px rgb(0, 132, 255);
+                text-shadow: 0 0 10px rgb(0, 52, 100), 0 0 10px rgb(0, 132, 255);
                 font-weight: bold;
                 letter-spacing: 2px;
             }
