--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -181,7 +181,7 @@
                             display: flex;
                             gap: 2rem;
                             width: 100%;
-                            margin: 1.5rem 0;
+                            margin: 1.5rem 0 1.5rem 1rem;
                             align-items: center;
 
                             i {
@@ -218,7 +218,11 @@
         }
     }
 }
-
+.cursorPointer:hover{
+    cursor: pointer;
+    box-shadow: 0px 0px 10px 2px rgb(22, 22, 22);
+    border-radius: 20px;
+}
 @media (max-width : 900px) {
     .profileMain {
         .mainInfoAndImg {
@@ -256,6 +260,14 @@
                 }
                 .otherInfo {
                     display: inline;
+
+                    .mainInfo{
+                        .twoBlock{
+                            .info{
+                                margin-left: 0;
+                            }
+                        }
+                    }
 
                     .profileImg {
                         img {
