--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="mainProjects" [ngClass]=" opacityNew ? 'opacity3' : '' ">
     <div class="mainCard">
         <h1 class="mainHeading">Projects</h1>
-        <div class="card">
+        <div class="card borderBottomYellow">
             <div class="imgAndDetails">
                 <div class="proIcon">
                     <img src="assets/mernLogin.jpg" alt="">
@@ -24,7 +24,7 @@
                 </ul>
             </div>
         </div>
-        <div class="card">
+        <div class="card borderBottomYellow">
             <div class="imgAndDetails">
                 <div class="proIcon">
                     <img src="assets/mean5.png" alt="">
@@ -48,7 +48,7 @@
                 </ul>
             </div>
         </div>
-        <div class="card">
+        <div class="card borderBottomYellow">
             <div class="imgAndDetails">
                 <div class="proIcon">
                     <img src="assets/snippet.png" alt="">
