--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -3,7 +3,7 @@
     <div class="workInfo">
         <h1 class="mainHeading">Work Experience</h1>
         <div class="cards">
-            <div class="card">
+            <div class="card borderBottomYellow">
                 <div class="imgComp">
                     <img class="compImg" src="assets/aquarious.jpg" alt="">
                 </div>
@@ -19,7 +19,7 @@
                     <button class="readMoreBtn" (click)="openPopupFun('Aquarious')">Read More</button>
                 </div>
             </div>
-            <div class="card">
+            <div class="card borderBottomBlue">
                 <div class="imgComp">
                     <img class="compImg" src="assets/fintech.jpg" alt="">
                 </div>
@@ -35,7 +35,7 @@
                     <button class="readMoreBtn colorYellow" (click)="openPopupFun('Fintech')">Read More</button>
                 </div>
             </div>
-            <div class="card">
+            <div class="card borderBottomYellow">
                 <div class="imgComp">
                     <img class="compImg" src="assets/intellect.png" alt="">
                 </div>
