some design changed

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@ body {
     background-size: cover;
     -webkit-background-clip: text;
     color: transparent;
-    background-image: url("https://c8.alamy.com/comp/2NP01N7/abstract-image-of-mixed-warm-colors-of-acrylic-paint-2NP01N7.jpg");
+    background-image: url("https://cdn4.vectorstock.com/i/1000x1000/34/83/abstract-colorful-mixed-for-background-rainbow-vector-27733483.jpg");
     padding-top: 5rem;
     font-weight: bold;
     letter-spacing: 1px;
