--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -44,6 +44,11 @@
             text-shadow: rgb(255, 255, 255) 1px 0 30px;
             transition: 0.2s;
         }
+        li:focus{
+            transition: 0.2s;
+            text-shadow: rgb(255, 255, 255) 1px 0 30px;
+            color: rgb(0, 132, 255);
+        }
     }
 
     .contactMe {
