--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,5 +1,5 @@
 <div class="mainWork" [ngClass]=" opacityNew ? 'opacity3' : '' ">
-    
+    <img class="backImg" src="https://4kwallpapers.com/images/wallpapers/planet-earth-night-view-illuminated-orbit-dark-background-5k-2560x1440-8934.jpg" alt="">
     <div class="workInfo">
         <h1 class="mainHeading">Work Experience</h1>
         <div class="cards">
@@ -8,15 +8,10 @@
                     <img class="compImg" src="assets/aquarious.jpg" alt="">
                 </div>
                 <h3>Aquarious Technology</h3>
-                <ul>
-                    <li>Created Angular-based responsive web application from scratch where
-                        admin and user have login and sign-up credentials</li>
-                    <li>Admin can manage the property listed and the user can buy these
-                        properties with the facilities listed by the admin, and Admin can go
-                        through the complaints registered by the user.</li>
-                </ul>
+                <h4 class="position">MEAN Stack Developer</h4>
+                <h4 class="duration">May 2023 to Aug 2023</h4>
                 <div class="btnCenter">
-                    <button class="readMoreBtn" (click)="openPopupFun('Aquarious')">Read More</button>
+                    <button class="readMoreBtn" (click)="openPopupFun('Aquarious')">Read More <i class="fa fa-angle-double-right"></i> </button>
                 </div>
             </div>
             <div class="card borderBottomBlue">
@@ -24,15 +19,10 @@
                     <img class="compImg" src="assets/fintech.jpg" alt="">
                 </div>
                 <h3>Fintech Global Center</h3>
-                <ul>
-                    <li>Developed NoCode responsive web application which is an Angular based project that is created to
-                        reduce the workload of creating
-                        applications with or without buying domains through programming</li>
-                    <li>Designed reusable and reliable code for use within a distributed cloud
-                        environments and to maintain the versions of code on GitLab.</li>
-                </ul>
+                <h4 class="position">Angular Developer</h4>
+                <h4 class="duration">Nov 2022 to Mar 2023</h4>
                 <div class="btnCenter">
-                    <button class="readMoreBtn colorYellow" (click)="openPopupFun('Fintech')">Read More</button>
+                    <button class="readMoreBtn colorYellow" (click)="openPopupFun('Fintech')">Read More <i class="fa fa-angle-double-right"></i></button>
                 </div>
             </div>
             <div class="card borderBottomYellow">
@@ -40,15 +30,10 @@
                     <img class="compImg" src="assets/intellect.png" alt="">
                 </div>
                 <h3>Intellect Design Arena</h3>
-                <ul>
-                    <li>The Product is designed to be used to give the decision of Pay or No
-                        Pay whether the transaction can be done or not depending on the
-                        Limits and Balances in the account.</li>
-                    <li>Revised, debugged, and updated old code bases to modern development
-                        standards, reducing operating costs, and improving functionality.</li>
-                </ul>
+                <h4 class="position">Software Engineer</h4>
+                <h4 class="duration">July 2021 to Sept 2023</h4>
                 <div class="btnCenter">
-                    <button class="readMoreBtn" (click)="openPopupFun('Intellect')">Read More</button>
+                    <button class="readMoreBtn" (click)="openPopupFun('Intellect')">Read More <i class="fa fa-angle-double-right"></i></button>
                 </div>
             </div>
         </div>
