--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -4,12 +4,12 @@
     .backImg {
         height: 100%;
         width: 100%;
-        opacity: 0.3;
+        opacity: 0.5;
         position: fixed;
     }
 
     .workInfo {
-        margin: 0 auto 5rem;
+        margin: 0 auto 0rem;
         width: 1100px;
         text-align: center;
 
@@ -24,8 +24,7 @@
 
         .cards {
             display: flex;
-            gap: 2rem;
-            margin-top: 7rem;
+            margin-top: 2rem;
 
             .card {
                 display: inline-grid;
@@ -33,13 +32,27 @@
                 padding: 2rem 1rem;
                 width: 400px;
                 backdrop-filter: blur(15px);
-                border-radius: 15px;
+                border-top-right-radius: 20px ;
+                border-bottom-left-radius: 20px;
+                border-top-left-radius: 0px;
+                border-bottom-right-radius: 0px;
                 box-shadow: 10px 10px 15px -5px rgb(0, 0, 0);
+                border: 1px solid rgb(0, 38, 82);
+                margin: 0 1rem;
 
                 h3 {
                     font-size: 30px;
                     color: white;
-                    margin: 2rem 0 1rem;
+                    margin: 1rem 0 0rem;
+                }
+
+                .position{
+                    margin: 1rem 0 !important;
+                    color: rgb(0, 132, 255);
+                }
+                .duration{
+                    color: gray;
+                    margin:  0.2rem 0 1.5rem!important;
                 }
 
                 .imgComp {
@@ -48,7 +61,7 @@
                     .compImg {
                         height: 10rem;
                         width: 10rem;
-                        margin-top: -6rem;
+                        // margin-top: -6rem;   
                         z-index: 999;
                         opacity: 1;
                         text-align: center;
@@ -84,6 +97,11 @@
                         transition: 0.5s;
                     }
                 }
+            }
+            .card:hover{
+                box-shadow: 0px 0px 15px 2px rgb(0, 123, 255);
+                background-color: black;
+                transition: 0.5s;
             }
         }
 
@@ -209,7 +227,7 @@
                 display: inline-block;
                 gap: 2rem;
                 .card {
-                    margin: 0 auto 7rem;
+                    margin: 0 1rem 4rem;
                     max-height: fit-content;
                     padding-bottom: 1.5rem;
                     min-height: fit-content;
@@ -251,7 +269,7 @@
             }
 
             .cards {
-                margin: 5rem auto 0;
+                margin: 1rem auto 0;
                 width: 100%;
                 text-align: center;
 
